@@ -2439,6 +2439,127 @@ name|getNumFound
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// Now test the new convenience parameter on the add() for commitWithin
+name|SolrInputDocument
+name|doc4
+init|=
+operator|new
+name|SolrInputDocument
+argument_list|()
+decl_stmt|;
+name|doc4
+operator|.
+name|addField
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"id4"
+argument_list|,
+literal|1.0f
+argument_list|)
+expr_stmt|;
+name|doc4
+operator|.
+name|addField
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"doc4"
+argument_list|,
+literal|1.0f
+argument_list|)
+expr_stmt|;
+name|doc4
+operator|.
+name|addField
+argument_list|(
+literal|"price"
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|server
+operator|.
+name|add
+argument_list|(
+name|doc4
+argument_list|,
+literal|500
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+comment|// wait 1 sec
+comment|// now check that it comes out...
+name|rsp
+operator|=
+name|server
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"id:id4"
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+comment|// wait and try again for slower machines
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|2000
+argument_list|)
+expr_stmt|;
+comment|// wait 2 seconds...
+name|rsp
+operator|=
+name|server
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"id:id4"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|rsp
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
